tests/fixtures/invalid/const_parameter_assignment.c
void mutate(const int value) {
    value += 1;
}

int main() {
    mutate(1);
    return 0;
}
